[project]
name = "rttools"
version = "0.2.0"
description = "Reto's tools for small tasks here and there!"
readme = "README.md"
authors = [
    { name = "Reto Trappitsch", email = "reto@galactic-forensics.space" }
]

dependencies = [
    "iniabu>=1.1.2",
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "matplotlib>=3.7.4",
    "scipy>=1.10.1",
    "pyarrow>=15.0.0",
    "pint>=0.21.1",
]
requires-python = ">= 3.10"
license = { text = "MIT" }

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.1",
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.9",
    "mkdocstrings[python]>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/trappitsch/rttools"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/rttools"]

[tool.pytest.ini_options]
addopts = "-v --cov=rttools"
testpaths = [
    "tests"
]
filterwarnings = 'ignore:datetime.datetime.utcfromtimestamp\(\) is deprecated:DeprecationWarning'  # 3rd party
